[package]
name = "fft-convolver"
version = "0.4.0"
edition = "2024"
authors = ["Stephan Eckes <stephan@neodsp.com>"]
description = "Audio convolution algorithm in pure Rust for real time audio processing"
repository = "https://github.com/neodsp/fft-convolver"
license = "MIT"
keywords = ["audio", "filter", "convolution", "fft", "dsp"]
categories = ["multimedia::audio"]
readme = "README.md"
homepage = "https://neodsp.com/"
rust-version = "1.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realfft = "3.5.0"
thiserror = "2.0"
rtsan-standalone = "0.3.0"

[dev-dependencies]
criterion = "0.8"
audio-file = "0.4"
audio-host = "0.1"
audio-blocks = "0.7"

[[bench]]
name = "convolver"
harness = false
